@@ -19,7 +19,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.ACCEPTED_STATE;
 import static uk.gov.hmcts.ecm.common.model.helper.Constants.CLOSED_STATE;
@@ -137,10 +136,10 @@ public final class HearingsToJudgmentsReport {
         long totalCasesWithin4Weeks = hearings.stream().filter(h -> h.judgmentWithin4Weeks).count();
         long totalCasesNotWithin4Weeks = hearings.stream().filter(h -> !h.judgmentWithin4Weeks).count();
 
-        float totalCasesWithin4WeeksPercent = (totalCases != 0)
-                ? ((float) totalCasesWithin4Weeks / totalCases) * 100 : 0;
-        float totalCasesNotWithin4WeeksPercent = (totalCases != 0)
-                ? ((float) totalCasesNotWithin4Weeks / totalCases) * 100 : 0;
+        float totalCasesWithin4WeeksPercent =
+                (totalCases == 0) ? 0 : ((float) totalCasesWithin4Weeks / totalCases) * 100;
+        float totalCasesNotWithin4WeeksPercent =
+                (totalCases == 0) ? 0 : ((float) totalCasesNotWithin4Weeks / totalCases) * 100;
 
         reportSummary.setTotalCases(String.valueOf(totalCases));
         reportSummary.setTotal4Wk(String.valueOf(totalCasesWithin4Weeks));
@@ -164,7 +163,7 @@ public final class HearingsToJudgmentsReport {
             LocalDate hearingListedDate = LocalDate.parse(dateListedType.getListedDate(), OLD_DATE_TIME_PATTERN);
             List<JudgementTypeItem> judgements = judgmentsCollection.stream()
                                 .filter(j -> judgmentHearingDateMatchHearingListedDate(j, hearingListedDate))
-                                .collect(Collectors.toList());
+                                .toList();
 
             if (judgements.isEmpty()
                     || !isWithinDateRange(hearingListedDate)
